# avr-dna-fw

./: .gitignore  README.md
dna-firmware/: CMakeLists.txt  README.md
dna-firmware/include/: board_specific.h  syzygy_dna_fw.h  syzygy_helpers.h  syzygy_seq.h
dna-firmware/src/: main.c
src/: main.c  syzygy_dna_fw.c  syzygy_seq.c
test-pod-firmware/include/: USI_TWI_Slave.h
test-pod-firmware/src/: USI_TWI_Slave.c  main.c  syzygy_dna_fw.c  syzygy_helpers.c
